@@ -1,3 +1,7 @@
+2007-12-10  Bernhard Walle <bernhard.walle@gmx.de>
+
+	* the "upload" command also accepts filenames directly now
+
 2007-11-22  Bernhard Walle <bernhard.walle@gmx.de>
 
 	* fixed and tested GUI on Win32
